--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "",
+  "description": "an App to help you keep track of all the important stuff",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
